apps/base/chat-copilot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-copilot-webapp
  labels:
    app: chat-copilot-webapp  
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: chat-copilot-webapp
---
apiVersion: v1
kind: Service
metadata:
  name: chat-copilot-webapi
  labels:
    app: chat-copilot-webapi  
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: chat-copilot-webapi
---
apiVersion: v1
kind: Service
metadata:
  name: chat-copilot-web-searcher
  labels:
    app: chat-copilot-web-searcher
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: chat-copilot-web-searcher
